Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9051

mysqld got signal 11, after upgrade to 10.1.8

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.1.8, 5.5(EOL), 10.0(EOL), 10.1(EOL)
    • 5.5.47, 10.0.23, 10.1.9
    • Plugin - feedback, Plugins
    • Debian 8.2,Linux Server0 3.16.0-4-amd64 #1 SMP Debian 3.16.7-ckt11-1+deb8u5 (2015-10-09) x86_64 GNU/Linux
    • 10.2.0-1

    Description

      After upgrading Mariadb 10.1.7 to 10.1.8 MariaDB is crashing with Signal 11 after about 24 hours of upgrade. I am using MariaDB Repo.

      I am having two Servers running different applications and are not related to each other, both running MariaDB 10.1.7 and were upgraded to 10.1.8 at approx same time. After approx. 24 hours both Crashed with Signal 11 with a stack trace in the error log.

      Now I have restarted both the Servers and everything seems fine. There are no signs of data corruption. Stack trace for both the Serves is nearly identical.

      Before upgrade to 10.1.8, both the Servers were running perfectly fine for months together. I am not using replication on any of the servers.

      Show Engines on both the Servers:
      CSV
      SEQUENCE
      MRG_MyISAM
      MyISAM
      CONNECT
      InnoDB
      MEMORY
      Aria
      PERFORMANCE_SCHEMA

      Attached my.cnf for both servers and binary logs of Server 1.

      Attachments

        1. Server 1 my.cnf
          5 kB
          Mohit Chandel
        2. Server2 my.cnf
          6 kB
          Mohit Chandel
        3. Server 1 binlog 6.txt
          1 kB
          Mohit Chandel
        4. Server 1 binlog 5.txt
          1 kB
          Mohit Chandel
        5. Server 1 Stacktrace.txt
          3 kB
          Mohit Chandel
        6. Server 2 Stacktrace.txt
          3 kB
          Mohit Chandel

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              mchandel Mohit Chandel
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.