MDEV-9051 mysqld got signal 11, after upgrade to 10.1.8

feedback plugin needs to set tables->select_lex properly